force-app/main/default/objects/Cuidarnos_IVR_Calls__c/Cuidarnos_IVR_Calls__c.object-meta.xml
<CustomObject>
    <label>IVR Calls</label>
    <nameField>
        <displayFormat>IVR-{00000}</displayFormat>
        <label>IVR Calls Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVR Call</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>