force-app/main/default/objects/Cuidarnos_IVR_Calls__c/fields/Covid19__c.field-meta.xml
<CustomField>
    <fullName>Covid19__c</fullName>
    <label>Covid19</label>
    <referenceTo>Covid19__c</referenceTo>
    <relationshipLabel>IVR Call</relationshipLabel>
    <relationshipName>IVR_Call</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>