force-app/main/default/objects/Cuidarnos_IVR_Calls__c/fields/Doctor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Phone__c</fullName>
    <label>Doctor Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>