force-app/main/default/objects/Cuidarnos_IVR_Calls__c/fields/Doctor_Phone_Is_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Phone_Is_Mobile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Doctor Phone Is Mobile ?</label>
    <type>Checkbox</type>
</CustomField>