force-app/main/default/objects/Cuidarnos_IVR_Calls__c/fields/Paciente_Phone_Is_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Paciente_Phone_Is_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paciente Phone Is Mobile</label>
    <type>Checkbox</type>
</CustomField>