force-app/main/default/objects/Cuidarnos_IVR_Calls__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IVR_Call</relationshipName>
    <type>Lookup</type>
</CustomField>