force-app/main/default/objects/Cuidarnos_IVR_Calls__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Covid19__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>